rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2008_EXAMPLES.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2008_EXAMPLES.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 10, column 2]
    │
    │ 
 09 │  /* For a Version 2 mapping, the last component of the module identifier would be version2(2) */
 10 │  EXAMPLES ::= 	SEQUENCE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
    │
────╯
