rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2008_XSDv1.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2008_XSDv1.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 47, column 4]
    │
    │ 
 47 │  		(ALL EXCEPT(-0 | MINUS-INFINITY | PLUS-INFINITY | NOT-A-NUMBER)) ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 48 │  /* xsd:double */
    │
────╯
