rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2008_XSDv2.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2008_XSDv2.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 42, column 33]
    │
    │ 
 42 │   { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 43 │  			TIME (SETTINGS "Basic=Date Date=YMD"),
 44 │  			VisibleString
 45 │  	                  (FROM ("0".."9" | "DHMPSTY:.+-"))
 46 │     			 (CONSTRAINED BY {/* W3C XML Schema 1.0 Part 2, 3.2.9
 47 │                                     and used if a time-zone is present */})}
 49 │  /* xsd:dateTime */
    │
────╯
