rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2015_ABC.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2015_ABC.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 12, column 2]
    │
    │ 
 12 │  Abc-elem ::= [NAME AS UNCAPITALIZED] Xyz-type ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
    │
────╯
