rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2015_EXAMPLES.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2015_EXAMPLES.asn1
---
Error matching ASN syntax at while parsing:
   ╭─[line 2, column 2]
   │
   │ 
 1 │  EXAMPLES{joint-iso-itu-t asn1(1) examples(999) xml-defined-types(3)}
 2 │  "ASN.1/Examples/XML-defined-types" ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
   │
───╯
