rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2015_XSDv1.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2015_XSDv1.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 50, column 18]
    │
    │ 
 50 │   (0 | MINUS-INFINITY | PLUS-INFINITY | NOT-A-NUMBER | WITH COMPONENTS { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 51 │  			mantissa(-9007199254740991..9007199254740991),
 52 │  			base(2),
 53 │  			exponent(-1075..970)})
 55 │  /* xsd:duration */
    │
────╯
