rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2015_XSDv2.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2015_XSDv2.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 43, column 33]
    │
    │ 
 43 │   { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 44 │  			TIME (SETTINGS "Basic=Date Date=YMD"),
 45 │  			VisibleString
 46 │  	                  (FROM ("0".."9" | "DHMPSTY:.+-"))
 47 │     			 (CONSTRAINED BY {/* W3C XML Schema 1.0 Part 2, 3.2.9
 48 │                                     and used if a time-zone is present */})}
 50 │  /* xsd:dateTime */
    │
────╯
