rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x694_2015_XYZ.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x694_2015_XYZ.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 11, column 2]
    │
    │ 
 11 │  Xyz-elem ::= [NAME AS UNCAPITALIZED] XSD.String ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
    │
────╯
